--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -81,7 +81,7 @@
   children:
     - title: Creating content
       page: "content-intro.html"
-    - title: Talent Hub
+    - title: Verified Partners
       page: "talent-hub.html"
     - title: Design experiences
       children:
