--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -235,7 +235,7 @@
   website: 
   email: zkarik@gmail.com
   twitter: 
-  image: /images/partners/kalt-creative.png
+  image: /images/partners/kalt-creative.jpeg
   description: Kalt Creative
   tags:
     - Wearables
