--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -267,4 +267,20 @@ We now offer an extensive range of metaverse development services, using our kno
     - Architect
     - Events 
     - Full Production
+- name: FRAG Games
+  partnerId: 20
+  default_link: https://www.frag-games.com/
+  website: https://www.frag-games.com/
+  email: hello@frag-games.com
+  twitter: https://twitter.com/4rockngames
+  instagram: https://www.instagram.com/fraggames/
+  linkedin: https://www.linkedin.com/company/frag-games
+  youtube: https://www.youtube.com/channel/UCJzJJDa3PwX0m87L_qRnGXA
+  image: /images/partners/frag.png
+  description: A Full Service Game Studio in the heart of Lahore, Pakistan. 
+  tags:
+    - Wearables
+    - Architect
+    - Events 
+    - Full Production
    
