--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -72,7 +72,8 @@
     - Full Production
 - name: Malloy
   partnerId: 5
-  twitter: https://twitter.com/ahoimalloy?lang=es
+  email: malloy@feekagames.com
+  twitter: https://twitter.com/feekacafe
   image: /images/partners/malloy.png
   description: Decentraland Wearables NFT Artist, and  Wearables Submission Curator. Malloy has helped brands like D-Cave.
   location: United Kindom
