--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -38,11 +38,11 @@
   partnerId: 3
   default_link: https://voxelarchitects.com/
   website: https://voxelarchitects.com/
+  email: info@voxelarchitects.com
   twitter: https://twitter.com/VoxelArchitects
   instagram: https://www.instagram.com/voxel.architects/
   image: /images/partners/voxel-architects.jpeg
-  description: We are a team of artists passionate about virtual art, virtual reality, and blockchain technology. At base, we are professional designers and architects, mostly operating in the automotive sector. We decided to take a step forward, look up to the future and invest our time and resources in developing a visually pleasing and functional virtual world for everyone to use and enjoy. We are committed to always deliver our best product, in time and with no compromises. We love to take on challenging projects and customer satisfaction is our top priority. No matter the size and the difficulty of the project, Voxel Architects will build it. Voxel Architects helped brands like Jacob&Co and Auroboros.
-  location: Portugal
+  description: Voxel Architects is one of the first metaverse-native architecture studios, committed to designing stunning virtual structures and experiences in the leading virtual worlds. Founded in 2020, and with over 100 projects in their portfolio, Voxel Architects helped artists, brands, and companies such as ConsenSys, Metamask, Sotheby's, Auroboros, Real Vision and Tom Sachs, among many others. No matter the size and the difficulty of the project, Voxel Architects will build it.
   languages:
     - English
     - Spanish
