--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -190,7 +190,7 @@
   description: Digital designer. Virtual reality. Metaverse explorer.
   tags:
     - Wearables
-- name: Sparkles Studio
+- name: Studio Sparkles 
   partnerId: 14
   default_link: https://www.sparkles.studio/
   website: https://www.sparkles.studio/
@@ -198,7 +198,7 @@
   email: sparklesstudio@protonmail.com
   twitter: https://twitter.com/studio_sparkles
   image: /images/partners/sparkles-studio.jpeg
-  description: Boutique Animation Studio making digital realms sparkle. We produce both 2d and 3d animation. Storyboards and animatics for any pitch or project. Avatars that look good in any metaverse!
+  description: Boutique Animation Studio making digital realms sparkle. We produce both 2d and 3d animation, storyboards and animatics for any pitch or project, and avatars that look good in any metaverse!
   tags:
     - Wearables
 - name: Metakey 
