--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -142,6 +142,7 @@
   facebook: https://www.facebook.com/xr.couture
   twitter: https://twitter.com/XRCouture
   instagram: https://www.instagram.com/xr.couture/
+  youtube: https://www.youtube.com/channel/UCtOO4rd59HCPGkiAExKMimQ
   discord: https://discord.com/invite/SReuhkyBcq
   linkedin: https://www.linkedin.com/company/xrcouture
   image: /images/partners/xrcouture.webp
