--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -73,9 +73,10 @@
 - name: Malloy
   partnerId: 5
   email: malloy@feekagames.com
+  discord: https://discord.gg/anhN4CpWZD
   twitter: https://twitter.com/feekacafe
   image: /images/partners/malloy.png
-  description: Decentraland Wearables NFT Artist, and  Wearables Submission Curator. Malloy has helped brands like D-Cave.
+  description: We Activate brands in the Metevarse and connect them to over 50,000 web3 and metaverse native users.
   location: United Kindom
   languages:
     - English
