--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -130,8 +130,10 @@
   instagram: https://www.instagram.com/fabeeobreen
   discord: https://discord.gg/ErKTmXQz6H
   facebook: https://www.facebook.com/fabeeobreen
+  youtube:  https://www.youtube.com/channel/UCgFLVvBtckjyPvekMWIk36Q
+  gitbook: https://fabeeobreen.gitbook.io/
   image: /images/partners/fabeeo-breen.jpeg
-  description: Fabeeo Breen provides services in 3D animation and dynamic simulations, NFT collections, virtual world showrooms and avatar development.
+  description: Fabeeo Breen is a Metaverse fashion Brand & Digital studio providing services in 3D animation and dynamic simulations, NFT collections, wearables, virtual world showrooms and avatar development.
   tags:
     - Individual
     - Wearables
