--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -281,6 +281,7 @@
   twitter: https://twitter.com/4rockngames
   instagram: https://www.instagram.com/fraggames/
   linkedin: https://www.linkedin.com/company/frag-games
+  facebook: https://www.facebook.com/4rockngames/
   youtube: https://www.youtube.com/channel/UCJzJJDa3PwX0m87L_qRnGXA
   image: /images/partners/frag.png
   description: A Full Service Game Studio in the heart of Lahore, Pakistan. 
