--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -304,7 +304,7 @@
     - Architect
     - Events 
     - Full Production
-- name: Spaced DAO
+- name: Spaces DAO
   partnerId: 22
   default_link: https://spacesdao.xyz/
   website: https://spacesdao.xyz/
