--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -7,6 +7,7 @@
   youtube: https://www.youtube.com/channel/UCIibGAk2q7tJWWiyWrOhYGw
   telegram: https://t.me/dappcraft
   email: hello@dapp-craft.com
+  youtube: https://www.youtube.com/channel/UCIibGAk2q7tJWWiyWrOhYGw
   image: /images/partners/dapp-craft.png
   description: Dapp Craft have many different projects in our portfolio. Wearables. Games. Events. Emotes. Scenes and other. Dapp Craft has helped brands like Guo Pei and Mercedes.
   tags:
