--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -285,7 +285,7 @@
   facebook: https://www.facebook.com/4rockngames/
   youtube: https://www.youtube.com/channel/UCJzJJDa3PwX0m87L_qRnGXA
   image: /images/partners/frag.png
-  description: A Full Service Game Studio in the heart of Lahore, Pakistan. 
+  description: 100+ team of experts, all working under one roof, making games which inspire gamers. We've collaborated with several partners before like Cartoon Network, Netflix, Nvidia, and so on. We're proud to be the only studio in Pakistan that handles projects on all currently available platforms, with some being our own IPs. We have also worked on multiple blockchain experiences to date. From creating a whole metaverse and making a marketplace to writing smart contracts, we've got the whole process covered.
   tags:
     - Wearables
     - Architect
