--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -368,3 +368,19 @@
     - Events 
     - Full Production
     - Land Rental
+     partnerId: 26
+  default_link: https://aviram.studio
+  website: https://aviram.studio
+  phone: +65 85122038
+  email: info@aviram.studio
+  twitter: https://twitter.com/AviramStudio
+  ArtStation: https://aviram_studio.artstation.com
+  linkedin: https://www.linkedin.com/company/aviram-studio/mycompany/?viewAsMember=true
+  youtube: https://www.youtube.com/channel/UC94d3cBpFZed0CzSh8BzQBQ 
+  image: /images/partners/aviram.jpg
+  description: Aviram studios provide Metaverse Development service to Brands and Organizations. We partner in the full production cycle right from conceptualization of environment and experience aligning with your the vision your customers and players. We come from decades of experience in 3D art. With our team of game designers, asset artist and game developers we are well placed to take on any project.
+  tags:
+     - Wearable
+    - Architect
+    - Full Production
+
