--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -368,9 +368,10 @@
     - Events 
     - Full Production
     - Land Rental
+    - name: Aviram Studio
      partnerId:  26
-  default_link: https://aviram.studio
-  website: https://aviram.studio
+  default_link: https://aviram.studio.com
+  website: https://aviram.studio.com
   phone: +65 85122038
   email: info@aviram.studio
   twitter: https://twitter.com/AviramStudio
