--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -370,8 +370,8 @@
     - Land Rental
 - name: Aviram Studio
      partnerId: 26
-  default_link: https://aviram.studio.com
-  website: https://aviram.studio.com
+  default_link: https://aviram.studio
+  website: https://aviram.studio
   phone: +65 85122038
   email: info@aviram.studio
   twitter: https://twitter.com/AviramStudio
